--- a/EN-index.html
+++ b/EN-index.html
@@ -731,7 +731,7 @@
 
                         <div class="contact-info-item">
                             <div class="contact-icon contact-icon-email"></div>
-                            <a href="mailto:info@amigatosdamilkinha.pt">info@amigatosdamilkinha.pt</a>
+                            <a href="mailto:milkinhageral@hotmail.com">milkinhageral@hotmail.com</a>
                         </div>
 
                         <!-- <div class="contact-info-item">
@@ -799,7 +799,6 @@
                         </div>
                         <div class="footer-legal">
                             Associação Amigatos da Milkinha<br>
-                            NIPC: 123456789<br>
                             <!-- Rua Fonte do Mundo, nº 40, 4700-383 Braga -->
                         </div>
                     </div>
@@ -826,7 +825,7 @@
                         </div>
                         <div class="contact-item">
                             <img src="./assets/img/Letter.svg" alt="Email" class="contact-icon">
-                            <span>info@amigatosdamilkinha.pt</span>
+                            <span>milkinhageral@hotmail.com</span>
                         </div>
                         <!-- <div class="contact-item">
                         <img src="./assets/img/Map Point.svg" alt="Address" class="contact-icon">
@@ -1019,27 +1018,27 @@
             var allCatCards = [
                 // Slide 1
                 [
-                    { name: 'Adolfina', age: '1 ano', gender: 'Feminino', breed: 'Europeu Comum', image: './assets/img/Adolfina1.png' },
-                    { name: 'Baunilha', age: '2 anos', gender: 'Masculino', breed: 'Europeu Comum', image: './assets/img/Baunilha.png' },
-                    { name: 'Brownie', age: '2 anos', gender: 'Masculino', breed: 'Siamês', image: './assets/img/Brownie.png' }
+                    { name: 'Adolfina', age: '1 year', gender: 'Female', breed: 'European Shorthair', image: './assets/img/Adolfina1.png' },
+                    { name: 'Baunilha', age: '2 years', gender: 'Male', breed: 'European Shorthair', image: './assets/img/Baunilha.png' },
+                    { name: 'Brownie', age: '2 years', gender: 'Male', breed: 'Siamese', image: './assets/img/Brownie.png' }
                 ],
                 // Slide 2
                 [
-                    { name: 'Daisy', age: '1 ano', gender: 'Feminino', breed: 'Pelo Longo', image: './assets/img/Daisy.png' },
-                    { name: 'Flash', age: '3 anos', gender: 'Masculino', breed: 'Pelo Longo', image: './assets/img/Flash.jpg' },
-                    { name: 'Gaio', age: '2 anos', gender: 'Masculino', breed: 'Chartreux', image: './assets/img/Gaio.jpg' }
+                    { name: 'Daisy', age: '1 year', gender: 'Female', breed: 'Longhair', image: './assets/img/Daisy.png' },
+                    { name: 'Flash', age: '3 years', gender: 'Male', breed: 'Longhair', image: './assets/img/Flash.jpg' },
+                    { name: 'Gaio', age: '2 years', gender: 'Male', breed: 'Chartreux', image: './assets/img/Gaio.jpg' }
                 ],
                 // Slide 3
                 [
-                    { name: 'Gafanhoto', age: '1 ano', gender: 'Masculino', breed: 'Europeu Comum', image: './assets/img/Gafanhoto.jpg' },
-                    { name: 'Harley Quinn', age: '10 anos', gender: 'Feminino', breed: 'Calico', image: './assets/img/Harley Quinn.jpg' },
-                    { name: 'Isa', age: '10 meses', gender: 'Feminino', breed: 'Europeu Comum', image: './assets/img/Isa.jpg' }
+                    { name: 'Gafanhoto', age: '1 year', gender: 'Male', breed: 'European Shorthair', image: './assets/img/Gafanhoto.jpg' },
+                    { name: 'Harley Quinn', age: '10 years', gender: 'Female', breed: 'Calico', image: './assets/img/Harley Quinn.jpg' },
+                    { name: 'Isa', age: '10 months', gender: 'Female', breed: 'European Shorthair', image: './assets/img/Isa.jpg' }
                 ],
                 // Slide 4
                 [
-                    { name: 'Jubileu', age: '5 anos', gender: 'Masculino', breed: 'Europeu Comum', image: './assets/img/Jubileu.jpg' },
-                    { name: 'Judy', age: '10 anos', gender: 'Feminino', breed: 'Europeu Comum', image: './assets/img/Judy.jpg' },
-                    { name: 'Kika', age: '1 ano', gender: 'Feminino', breed: 'Pelo Longo', image: './assets/img/Kika.jpg' }
+                    { name: 'Jubileu', age: '5 years', gender: 'Male', breed: 'European Shorthair', image: './assets/img/Jubileu.jpg' },
+                    { name: 'Judy', age: '10 years', gender: 'Female', breed: 'European Shorthair', image: './assets/img/Judy.jpg' },
+                    { name: 'Kika', age: '1 year', gender: 'Female', breed: 'Longhair', image: './assets/img/Kika.jpg' }
                 ]
             ];
 
@@ -1061,7 +1060,7 @@
                 <div class="cat-preview-info">
                     <h3>${cat.name}</h3>
                     <p>${cat.age} • ${cat.gender} • ${cat.breed}</p>
-                    <span class="cat-preview-status">Disponível</span>
+                    <span class="cat-preview-status">Available</span>
                 </div>
             </div>
         `;
@@ -1464,7 +1463,7 @@
         Mensagem:
         ${message}`;
 
-            const mailtoLink = `mailto:info@amigatosdamilkinha.pt?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
+            const mailtoLink = `mailto:milkinhageral@hotmail.com?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
             window.location.href = mailtoLink;
         }
 
