--- a/cats_grid.html
+++ b/cats_grid.html
@@ -990,7 +990,7 @@
 
                         <div class="contact-info-item">
                             <div class="contact-icon contact-icon-email"></div>
-                            <a href="mailto:info@amigatosdamilkinha.pt">info@amigatosdamilkinha.pt</a>
+                            <a href="mailto:milkinhageral@hotmail.com">milkinhageral@hotmail.com</a>
                         </div>
 
                         <!-- <div class="contact-info-item">
@@ -1082,7 +1082,7 @@
         Mensagem:
         ${message}`;
 
-                const mailtoLink = `mailto:info@amigatosdamilkinha.pt?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
+                const mailtoLink = `mailto:milkinhageral@hotmail.com?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
                 window.location.href = mailtoLink;
             }
 
@@ -1157,7 +1157,6 @@
                         </div>
                         <div class="footer-legal">
                             Associação Amigatos da Milkinha<br>
-                            NIPC: 123456789<br>
                             <!-- Rua Fonte do Mundo, nº 40, 4700-383 Braga -->
                         </div>
                     </div>
@@ -1184,7 +1183,7 @@
                         </div>
                         <div class="contact-item">
                             <img src="./assets/img/Letter.svg" alt="Email" class="contact-icon">
-                            <span>info@amigatosdamilkinha.pt</span>
+                            <span>milkinhageral@hotmail.com</span>
                         </div>
                         <!-- <div class="contact-item">
                             <img src="./assets/img/Map Point.svg" alt="Endereço" class="contact-icon">
