--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
 
                         <div class="contact-info-item">
                             <div class="contact-icon contact-icon-email"></div>
-                            <a href="mailto:info@amigatosdamilkinha.pt">info@amigatosdamilkinha.pt</a>
+                            <a href="mailto:milkinhageral@hotmail.com">milkinhageral@hotmail.com</a>
                         </div>
 
                         <!-- <div class="contact-info-item">
@@ -818,7 +818,6 @@
                         </div>
                         <div class="footer-legal">
                             Associação Amigatos da Milkinha<br>
-                            NIPC: 123456789<br>
                             <!-- Rua Fonte do Mundo, nº 40, 4700-383 Braga -->
                         </div>
                     </div>
@@ -845,7 +844,7 @@
                         </div>
                         <div class="contact-item">
                             <img src="./assets/img/Letter.svg" alt="Email" class="contact-icon">
-                            <span>info@amigatosdamilkinha.pt</span>
+                            <span>milkinhageral@hotmail.com</span>
                         </div>
                         <!-- <div class="contact-item">
                             <img src="./assets/img/Map Point.svg" alt="Endereço" class="contact-icon">
@@ -1483,7 +1482,7 @@
         Mensagem:
         ${message}`;
 
-            const mailtoLink = `mailto:info@amigatosdamilkinha.pt?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
+            const mailtoLink = `mailto:milkinhageral@hotmail.com?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
             window.location.href = mailtoLink;
         }
 
