commit cat-grid updates

--- a/EN-cats_grid.html
+++ b/EN-cats_grid.html
@@ -2471,7 +2471,7 @@
                 gender: 'Male',
                 age: '16 weeks',
                 breed: 'Siamese',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2488,7 +2488,7 @@
                 gender: 'Male',
                 age: '12 weeks',
                 breed: 'European Shorthair',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2539,7 +2539,7 @@
                 gender: 'Female',
                 age: '14 weeks',
                 breed: 'European Shorthair',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2658,7 +2658,7 @@
                 gender: 'Male',
                 age: '3 years',
                 breed: 'European Shorthair',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2675,7 +2675,7 @@
                 gender: 'Male',
                 age: '2 years',
                 breed: 'European Shorthair',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2777,7 +2777,7 @@
                 gender: 'Male',
                 age: '5 years',
                 breed: 'European Shorthair',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2794,7 +2794,7 @@
                 gender: 'Male',
                 age: '5 years',
                 breed: 'European Shorthair',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2811,7 +2811,7 @@
                 gender: 'Female',
                 age: '8 months',
                 breed: 'European Shorthair',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
