--- a/cats_grid.html
+++ b/cats_grid.html
@@ -2592,7 +2592,7 @@
                 gender: 'Masculino',
                 age: '12 semanas',
                 breed: 'Europeu Comum',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2643,7 +2643,7 @@
                 gender: 'Feminino',
                 age: '14 semanas',
                 breed: 'Europeu Comum',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2762,7 +2762,7 @@
                 gender: 'Masculino',
                 age: '3 anos',
                 breed: 'Europeu Comum',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2779,7 +2779,7 @@
                 gender: 'Masculino',
                 age: '2 anos',
                 breed: 'Europeu Comum',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2881,7 +2881,7 @@
                 gender: 'Masculino',
                 age: '5 anos',
                 breed: 'Europeu Comum',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2898,7 +2898,7 @@
                 gender: 'Masculino',
                 age: '5 anos',
                 breed: 'Europeu Comum',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
@@ -2915,7 +2915,7 @@
                 gender: 'Feminino',
                 age: '8 meses',
                 breed: 'Europeu Comum',
-                compatibility: ['unknown'],
+                compatibility: [''],
                 fivStatus: 'unknown',
                 felvStatus: 'unknown',
                 compatibleWithCats: null,
