--- a/cats_grid.html
+++ b/cats_grid.html
@@ -1637,10 +1637,10 @@
                             <img src="./assets/img/Map Point.svg" alt="Endereço" class="contact-icon">
                             <span>Rua Fonte do Mundo, nº 40<br>4700-383 Braga, Portugal</span>
                         </div> -->
-                        <div class="contact-item">
+                        <!-- <div class="contact-item">
                             <img src="./assets/img/Case.svg" alt="Horário" class="contact-icon">
                             <span>Seg-Dom 9:00-18:00</span>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
