--- a/EN-cats_grid.html
+++ b/EN-cats_grid.html
@@ -962,7 +962,7 @@
             <!-- Cat 51 - Julia -->
             <div class="cat-card" onclick="openModal('cat51')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Julia.jpg" alt="Julia" class="cat-image">
+                <img src="./assets/img/Cats-grid/Julia1.png" alt="Julia" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Julia</div>
                     <div class="cat-details">
@@ -2428,8 +2428,9 @@
                 compatibleWithDogs: true,
                 description: 'Found with her brother near their deceased mother, little Julia was adopted by Dama and gained new little brothers. Still recovering from a small cold, this little one is looking for a good family that will give her all the comfort and love she deserves.',
                 images: [
-                    './assets/img/Cats-grid/Julia.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Julia1.png',
+                    './assets/img/Cats-grid/Julia.png',
+                    './assets/img/Cats-grid/Julia2.jpg'
                 ]
             },
             cat52: {
