--- a/cats_grid.html
+++ b/cats_grid.html
@@ -961,7 +961,7 @@
             <!-- Cat 51 - Julia -->
             <div class="cat-card" onclick="openModal('cat51')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Julia.jpg" alt="Julia" class="cat-image">
+                <img src="./assets/img/Cats-grid/Julia1.png" alt="Julia" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Julia</div>
                     <div class="cat-details">
@@ -2532,8 +2532,9 @@
                 compatibleWithDogs: true,
                 description: 'Encontrada com o irmão perto da mãe que tinha falecido, a pequena Julia foi adotada pela Dama e ganhou novos irmãozinhos. Ainda a recuperar duma pequena constipação, esta pequenina procura uma boa família que lhe dê todo o conforto e amor que merece.',
                 images: [
-                    './assets/img/Cats-grid/Julia.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Julia1.png',
+                    './assets/img/Cats-grid/Julia.png',
+                    './assets/img/Cats-grid/Julia2.jpg'
                 ]
             },
             cat52: {
