--- a/EN-cats_grid.html
+++ b/EN-cats_grid.html
@@ -794,7 +794,7 @@
             <!-- Cat 39 - Vegeta -->
             <div class="cat-card" onclick="openModal('cat39')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Vegeta.jpg" alt="Vegeta" class="cat-image">
+                <img src="./assets/img/Cats-grid/Vegeta/Vegeta.jpg" alt="Vegeta" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Vegeta</div>
                     <div class="cat-details">
@@ -1228,7 +1228,7 @@
             <!-- Cat 70 - Van Damme -->
             <div class="cat-card" onclick="openModal('cat70')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Van_Damme.jpg" alt="Van Damme" class="cat-image">
+                <img src="./assets/img/Cats-grid/Van Damme/Van_Damme.jpg" alt="Van Damme" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Van Damme</div>
                     <div class="cat-details">
@@ -2247,8 +2247,10 @@
                 compatibleWithDogs: null,
                 description: 'A true only child since coming to the shelter, Vegeta started out as a difficult and wary cat both with colleagues and humans. Today he is the biggest purrer and loves being carried on lap while complaining about his colleagues. He loves pâté and napping with friends.',
                 images: [
-                    './assets/img/Cats-grid/Vegeta.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Vegeta/Vegeta.jpg',
+                    './assets/img/Cats-grid/Vegeta/Vegeta1.jpg',
+                    './assets/img/Cats-grid/Vegeta/Vegeta2.jpg',
+                    './assets/img/Cats-grid/Vegeta/Vegeta3.jpg'
                 ]
             },
             cat40: {
@@ -2790,8 +2792,8 @@
                 compatibleWithDogs: null,
                 description: 'Detailed information about Van Damme coming soon.',
                 images: [
-                    './assets/img/Cats-grid/Van_Damme.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Van Damme/Van_Damme.jpg',
+                    './assets/img/Cats-grid/Van Damme/Van_Damme1.jpg'
                 ]
             },
             cat71: {
