--- a/cats_grid.html
+++ b/cats_grid.html
@@ -793,7 +793,7 @@
             <!-- Cat 39 - Vegeta -->
             <div class="cat-card" onclick="openModal('cat39')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Vegeta.jpg" alt="Vegeta" class="cat-image">
+                <img src="./assets/img/Cats-grid/Vegeta/Vegeta.jpg" alt="Vegeta" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Vegeta</div>
                     <div class="cat-details">
@@ -1227,7 +1227,7 @@
             <!-- Cat 70 - Van Damme -->
             <div class="cat-card" onclick="openModal('cat70')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Van_Damme.jpg" alt="Van Damme" class="cat-image">
+                <img src="./assets/img/Cats-grid/Van Damme/Van_Damme.jpg" alt="Van Damme" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Van Damme</div>
                     <div class="cat-details">
@@ -2350,8 +2350,10 @@
                 compatibleWithDogs: null,
                 description: 'Um verdadeiro filho único desde que veio para o abrigo, o Vegeta começou por ser um gato complicado e desconfiado tanto dos colegas como dos humanos. Hoje é o maior ronroneiro e adora ser carregado ao colo enquanto se queixa dos colegas. Adora patê e de dormitar junto dos amigos.',
                 images: [
-                    './assets/img/Cats-grid/Vegeta.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Vegeta/Vegeta.jpg',
+                    './assets/img/Cats-grid/Vegeta/Vegeta1.jpg',
+                    './assets/img/Cats-grid/Vegeta/Vegeta2.jpg',
+                    './assets/img/Cats-grid/Vegeta/Vegeta3.jpg'
                 ]
             },
             cat40: {
@@ -2893,8 +2895,8 @@
                 compatibleWithDogs: null,
                 description: 'Informações detalhadas sobre Van Damme em breve.',
                 images: [
-                    './assets/img/Cats-grid/Van_Damme.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Van Damme/Van_Damme.jpg',
+                    './assets/img/Cats-grid/Van Damme/Van_Damme1.jpg'
                 ]
             },
             cat71: {
