--- a/EN-cats_grid.html
+++ b/EN-cats_grid.html
@@ -808,7 +808,7 @@
             <!-- Cat 40 - Vitória -->
             <div class="cat-card" onclick="openModal('cat40')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Vitória.jpg" alt="Vitória" class="cat-image">
+                <img src="./assets/img/Cats-grid/Vitória/Vitória.jpg" alt="Vitória" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Vitória</div>
                     <div class="cat-details">
@@ -819,12 +819,12 @@
                 </div>
             </div>
 
-            <!-- Cat 41 - Xerife -->
+            <!-- Cat 41 - Xerif -->
             <div class="cat-card" onclick="openModal('cat41')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Xerife.jpg" alt="Xerife" class="cat-image">
+                <img src="./assets/img/Cats-grid/Xerif/Xerif.jpg" alt="Xerif" class="cat-image">
                 <div class="cat-info">
-                    <div class="cat-name">Xerife</div>
+                    <div class="cat-name">Xerif</div>
                     <div class="cat-details">
                         <span class="detail-tag">5 years</span>
                         <span class="detail-tag">Male</span>
@@ -836,7 +836,7 @@
             <!-- Cat 42 - Zuzu -->
             <div class="cat-card" onclick="openModal('cat42')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Zuzu.jpg" alt="Zuzu" class="cat-image">
+                <img src="./assets/img/Cats-grid/Zuzu/Zuzu.jpg" alt="Zuzu" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Zuzu</div>
                     <div class="cat-details">
@@ -1256,7 +1256,7 @@
             <!-- Cat 72 - Xiquinho -->
             <div class="cat-card" onclick="openModal('cat72')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Xiquinho.jpg" alt="Xiquinho" class="cat-image">
+                <img src="./assets/img/Cats-grid/Xiquinho/Xiquinho.jpg" alt="Xiquinho" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Xiquinho</div>
                     <div class="cat-details">
@@ -1270,7 +1270,7 @@
             <!-- Cat 73 - Yoshi -->
             <div class="cat-card" onclick="openModal('cat73')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Yoshi.jpg" alt="Yoshi" class="cat-image">
+                <img src="./assets/img/Cats-grid/Yoshi/Yoshi.jpg" alt="Yoshi" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Yoshi</div>
                     <div class="cat-details">
@@ -1284,7 +1284,7 @@
             <!-- Cat 74 - Éster -->
             <div class="cat-card" onclick="openModal('cat74')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Ester.jpg" alt="Éster" class="cat-image">
+                <img src="./assets/img/Cats-grid/Éster/Éster.jpg" alt="Éster" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Éster</div>
                     <div class="cat-details">
@@ -2266,12 +2266,12 @@
                 compatibleWithDogs: null,
                 description: 'Very calm and quiet, but a bit shy. She loves a good dose of petting. Rescued in Guimarães, this chubby girl was rescued with her kittens and kittens from other litters (since adopted). Mother of Bruxinha.',
                 images: [
-                    './assets/img/Cats-grid/Vitória.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Vitória/Vitória.jpg',
+                    './assets/img/Cats-grid/Vitória/Vitória1.jpg'
                 ]
             },
             cat41: {
-                name: 'Xerife',
+                name: 'Xerif',
                 gender: 'Male',
                 age: '5 years',
                 breed: 'Domestic Longhair',
@@ -2283,8 +2283,10 @@
                 compatibleWithDogs: null,
                 description: 'Always imposing respect in the shelter, but friend to all, Xerife is a very loving senior kitten. He loves our company and good pâté. He lost all his little teeth due to gingivitis, but continues to be one of our biggest foodies. Despite his age he still loves a good play session. He lived in a yard until his caregiver asked the shelter for help to care for him.',
                 images: [
-                    './assets/img/Cats-grid/Xerife.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Xerif/Xerif.jpg',
+                    './assets/img/Cats-grid/Xerif/Xerif1.jpg',
+                    './assets/img/Cats-grid/Xerif/Xerif2.jpg',
+                    './assets/img/Cats-grid/Xerif/Xerif3.jpg'
                 ]
             },
             cat42: {
@@ -2300,8 +2302,8 @@
                 compatibleWithDogs: null,
                 description: 'Confused by many with Oreo, but she has a beautiful long tail and a cropped ear. Zuzu is a shy but very sweet kitten. She loves the company of juvenile cats and never misses an opportunity to eat pâté. She accepts good petting, but with some care.',
                 images: [
-                    './assets/img/Cats-grid/Zuzu.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Zuzu/Zuzu.jpg',
+                    './assets/img/Cats-grid/Zuzu/Zuzu1.jpg'
                 ]
             },
             cat43: {
@@ -2826,8 +2828,9 @@
                 compatibleWithDogs: null,
                 description: 'Detailed information about Xiquinho coming soon.',
                 images: [
-                    './assets/img/Cats-grid/Xiquinho.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Xiquinho/Xiquinho.jpg',
+                    './assets/img/Cats-grid/Xiquinho/Xiquinho1.jpg',
+                    './assets/img/Cats-grid/Xiquinho/Xiquinho2.jpg'
                 ]
             },
             cat73: {
@@ -2843,8 +2846,9 @@
                 compatibleWithDogs: null,
                 description: 'Detailed information about Yoshi coming soon.',
                 images: [
-                    './assets/img/Cats-grid/Yoshi.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Yoshi/Yoshi.jpg',
+                    './assets/img/Cats-grid/Yoshi/Yoshi1.jpg',
+                    './assets/img/Cats-grid/Yoshi/Yoshi2.jpg'
                 ]
             },
             cat74: {
@@ -2860,8 +2864,8 @@
                 compatibleWithDogs: null,
                 description: 'Detailed information about Éster coming soon.',
                 images: [
-                    './assets/img/Cats-grid/Ester.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Éster/Éster.jpg',
+                    './assets/img/Cats-grid/Éster/Éster1.jpg'
                 ]
             }
         };
