--- a/cats_grid.html
+++ b/cats_grid.html
@@ -807,7 +807,7 @@
             <!-- Cat 40 - Vitória -->
             <div class="cat-card" onclick="openModal('cat40')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Vitória.jpg" alt="Vitória" class="cat-image">
+                <img src="./assets/img/Cats-grid/Vitória/Vitória.jpg" alt="Vitória" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Vitória</div>
                     <div class="cat-details">
@@ -818,12 +818,12 @@
                 </div>
             </div>
 
-            <!-- Cat 41 - Xerife -->
+            <!-- Cat 41 - Xerif -->
             <div class="cat-card" onclick="openModal('cat41')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Xerife.jpg" alt="Xerife" class="cat-image">
+                <img src="./assets/img/Cats-grid/Xerif/Xerif.jpg" alt="Xerif" class="cat-image">
                 <div class="cat-info">
-                    <div class="cat-name">Xerife</div>
+                    <div class="cat-name">Xerif</div>
                     <div class="cat-details">
                         <span class="detail-tag">5 anos</span>
                         <span class="detail-tag">Masculino</span>
@@ -835,7 +835,7 @@
             <!-- Cat 42 - Zuzu -->
             <div class="cat-card" onclick="openModal('cat42')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Zuzu.jpg" alt="Zuzu" class="cat-image">
+                <img src="./assets/img/Cats-grid/Zuzu/Zuzu.jpg" alt="Zuzu" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Zuzu</div>
                     <div class="cat-details">
@@ -1255,7 +1255,7 @@
             <!-- Cat 72 - Xiquinho -->
             <div class="cat-card" onclick="openModal('cat72')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Xiquinho.jpg" alt="Xiquinho" class="cat-image">
+                <img src="./assets/img/Cats-grid/Xiquinho/Xiquinho.jpg" alt="Xiquinho" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Xiquinho</div>
                     <div class="cat-details">
@@ -1269,7 +1269,7 @@
             <!-- Cat 73 - Yoshi -->
             <div class="cat-card" onclick="openModal('cat73')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Yoshi.jpg" alt="Yoshi" class="cat-image">
+                <img src="./assets/img/Cats-grid/Yoshi/Yoshi.jpg" alt="Yoshi" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Yoshi</div>
                     <div class="cat-details">
@@ -1283,7 +1283,7 @@
             <!-- Cat 74 - Éster -->
             <div class="cat-card" onclick="openModal('cat74')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Ester.jpg" alt="Éster" class="cat-image">
+                <img src="./assets/img/Cats-grid/Éster/Éster.jpg" alt="Éster" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Éster</div>
                     <div class="cat-details">
@@ -2369,12 +2369,12 @@
                 compatibleWithDogs: null,
                 description: 'Muito tranquila e sossegada, mas um pouco tímida. Adora uma boa dose de festinhas. Resgatada em Guimarães, esta redondinha foi resgatada com filhotes dela e de outras ninhadas (entretanto adotados).Mamã da Bruxinha.',
                 images: [
-                    './assets/img/Cats-grid/Vitória.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Vitória/Vitória.jpg',
+                    './assets/img/Cats-grid/Vitória/Vitória1.jpg'
                 ]
             },
             cat41: {
-                name: 'Xerife',
+                name: 'Xerif',
                 gender: 'Masculino',
                 age: '5 anos',
                 breed: 'Domestico Pelo Longo',
@@ -2384,10 +2384,12 @@
                 compatibleWithCats: null,
                 compatibleWithChildren: null,
                 compatibleWithDogs: null,
-                description: 'Sempre a impor respeito no abrigo, mas amiguinho de todos, o Xerife é um gatinho sénior muito amoroso. Adora a nossa companhia e um bom patê. Perdeu os dentinhos todos devido à gengivite, mas continua a ser um dos nossos maiores gulosos. Apesar da idade ainda adora uma boa brincadeira. Vivia num quintal até a cuidadora ter pedido ajuda ao abrigo para cuidar dele.',
+                description: 'Sempre a impor respeito no abrigo, mas amiguinho de todos, o Xerif é um gatinho sénior muito amoroso. Adora a nossa companhia e um bom patê. Perdeu os dentinhos todos devido à gengivite, mas continua a ser um dos nossos maiores gulosos. Apesar da idade ainda adora uma boa brincadeira. Vivia num quintal até a cuidadora ter pedido ajuda ao abrigo para cuidar dele.',
                 images: [
-                    './assets/img/Cats-grid/Xerife.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Xerif/Xerif.jpg',
+                    './assets/img/Cats-grid/Xerif/Xerif1.jpg',
+                    './assets/img/Cats-grid/Xerif/Xerif2.jpg',
+                    './assets/img/Cats-grid/Xerif/Xerif3.jpg'
                 ]
             },
             cat42: {
@@ -2403,8 +2405,8 @@
                 compatibleWithDogs: null,
                 description: 'Confundida por muitos pela Oreo, mas tem uma bela cauda longa e a orelha cortada. A Zuzu é uma gatinha tímida, mas muito meiga. Adora a companhia dos gatos juvenis e não perde uma oportunidade para comer patê. Aceita uma boa festinha, mas com algum cuidado.',
                 images: [
-                    './assets/img/Cats-grid/Zuzu.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Zuzu/Zuzu.jpg',
+                    './assets/img/Cats-grid/Zuzu/Zuzu1.jpg'
                 ]
             },
             cat43: {
@@ -2929,8 +2931,9 @@
                 compatibleWithDogs: null,
                 description: 'Informações detalhadas sobre Xiquinho em breve.',
                 images: [
-                    './assets/img/Cats-grid/Xiquinho.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Xiquinho/Xiquinho.jpg',
+                    './assets/img/Cats-grid/Xiquinho/Xiquinho1.jpg',
+                    './assets/img/Cats-grid/Xiquinho/Xiquinho2.jpg'
                 ]
             },
             cat73: {
@@ -2946,8 +2949,9 @@
                 compatibleWithDogs: null,
                 description: 'Informações detalhadas sobre Yoshi em breve.',
                 images: [
-                    './assets/img/Cats-grid/Yoshi.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Yoshi/Yoshi.jpg',
+                    './assets/img/Cats-grid/Yoshi/Yoshi1.jpg',
+                    './assets/img/Cats-grid/Yoshi/Yoshi2.jpg'
                 ]
             },
             cat74: {
@@ -2963,8 +2967,8 @@
                 compatibleWithDogs: null,
                 description: 'Informações detalhadas sobre Éster em breve.',
                 images: [
-                    './assets/img/Cats-grid/Ester.jpg',
-                    'https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&h=400&fit=crop'
+                    './assets/img/Cats-grid/Éster/Éster.jpg',
+                    './assets/img/Cats-grid/Éster/Éster1.jpg'
                 ]
             }
         };
